--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,10 @@ dependencies:
     sdk: flutter
   http: ^0.12.2
   audioplayers: ^0.17.0
-
-
+  built_value: ^7.1.0
+  built_collection: ^4.3.2
+  json_annotation: ^3.1.1
+  freezed_annotation: ^0.12.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -35,6 +37,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.10.0
+  built_value_generator: ^7.1.0
+  json_serializable: ^3.5.1
+  flutter_redux: ^0.7.0
+  redux: ^4.0.0+3
+  freezed: any
+  analyzer: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
